{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 21,
  "lineage": "301b3274-f334-b5c5-de46-db3d0b115f39",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azfw-r04k",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/azureFirewalls/azfw-r04k/applicationRuleCollections/aksRequiredRulesr04k",
            "name": "aksRequiredRulesr04k",
            "priority": 100,
            "resource_group_name": "cngbb-rg-r04k",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "updateInfraRules",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16"
                ],
                "target_fqdns": [
                  "*.cdn.mcr.io",
                  "*.data.mcr.microsoft.com",
                  "*.hcp.eastus.azmk8s.io",
                  "acs-mirror.azureedge.net",
                  "login.microsoftonline.com",
                  "management.azure.com",
                  "mcr.microsoft.com",
                  "packages.microsoft.com"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.aks",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "azureMonitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azfw-r04k",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/azureFirewalls/azfw-r04k/applicationRuleCollections/azureMonitorRequiredRulesr04k",
            "name": "azureMonitorRequiredRulesr04k",
            "priority": 110,
            "resource_group_name": "cngbb-rg-r04k",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "azureMonitorRules",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16"
                ],
                "target_fqdns": [
                  "*.monitoring.azure.com",
                  "*.ods.opinsights.azure.com",
                  "*.oms.opinsights.azure.com",
                  "dc.services.visualstudio.com"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.aks",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "updates",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azfw-r04k",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/azureFirewalls/azfw-r04k/applicationRuleCollections/ubuntuUpdateInfrastructurer04k",
            "name": "ubuntuUpdateInfrastructurer04k",
            "priority": 300,
            "resource_group_name": "cngbb-rg-r04k",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "updateInfraRules",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  },
                  {
                    "port": 80,
                    "type": "Http"
                  }
                ],
                "source_addresses": [
                  "10.0.0.0/16"
                ],
                "target_fqdns": [
                  "azure.archive.ubuntu.com",
                  "changelogs.ubuntu.com",
                  "keyserver.ubuntu.com",
                  "launchpad.net",
                  "ppa.launchpad.net",
                  "security.ubuntu.com"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.aks",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "ntp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "azfw-r04k",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/azureFirewalls/azfw-r04k/networkRuleCollections/ntpRuler04k",
            "name": "ntpRuler04k",
            "priority": 200,
            "resource_group_name": "cngbb-rg-r04k",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "*"
                ],
                "destination_ports": [
                  "123"
                ],
                "name": "ubuntuNTP",
                "protocols": [
                  "UDP"
                ],
                "source_addresses": [
                  "10.0.16.0/22"
                ]
              }
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.aks",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.aks",
            "azurerm_subnet.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "cngbb-pip-r04k",
            "fqdn": "cngbb-pip-r04k.eastus.cloudapp.azure.com",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/publicIPAddresses/pip-fw-r04k",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.43.40",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-fw-r04k",
            "resource_group_name": "cngbb-rg-r04k",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/routeTables/cngbbaksRouteTabler04k/routes/defaultRoute",
            "name": "defaultRoute",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "cngbb-rg-r04k",
            "route_table_name": "cngbbaksRouteTabler04k",
            "timeouts": null
          },
          "dependencies": [
            "azurerm_firewall.aks",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.aks",
            "azurerm_route_table.aks",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/routeTables/cngbbaksRouteTabler04k",
            "location": "eastus",
            "name": "cngbbaksRouteTabler04k",
            "resource_group_name": "cngbb-rg-r04k",
            "route": [],
            "subnets": [],
            "tags": {
              "environment": "default"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "acr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.64/26",
            "address_prefixes": [
              "10.0.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k/subnets/ACRSubnet",
            "name": "ACRSubnet",
            "resource_group_name": "cngbb-rg-r04k",
            "service_endpoints": [
              "Microsoft.ContainerRegistry"
            ],
            "virtual_network_name": "AksDemoVnetr04k"
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "azurerm_virtual_network.aks",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.16.0/22",
            "address_prefixes": [
              "10.0.16.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k/subnets/AKSSubnet",
            "name": "AKSSubnet",
            "resource_group_name": "cngbb-rg-r04k",
            "virtual_network_name": "AksDemoVnetr04k"
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "azurerm_virtual_network.aks",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/26",
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "cngbb-rg-r04k",
            "virtual_network_name": "AksDemoVnetr04k"
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "azurerm_virtual_network.aks",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k/subnets/AKSSubnet",
            "route_table_id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/routeTables/cngbbaksRouteTabler04k",
            "subnet_id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k/subnets/AKSSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "azurerm_route_table.aks",
            "azurerm_subnet.aks",
            "azurerm_virtual_network.aks",
            "random_string.prefix",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "48f4a7c9-96cf-46e6-81be-d624ed2cd05a",
            "id": "/subscriptions/40545cc3-81f4-42c9-953d-67534438918e/resourceGroups/cngbb-rg-r04k/providers/Microsoft.Network/virtualNetworks/AksDemoVnetr04k",
            "location": "eastus",
            "name": "AksDemoVnetr04k",
            "resource_group_name": "cngbb-rg-r04k",
            "tags": {
              "environment": "default"
            }
          },
          "dependencies": [
            "azurerm_resource_group.aks",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}